--- a/arch/arm64/configs/bullhead_defconfig
+++ b/arch/arm64/configs/bullhead_defconfig
@@ -43,6 +43,7 @@ CONFIG_ARCH_WANTS_CTXSW_LOGGING=y
 CONFIG_NR_CPUS=6
 CONFIG_PREEMPT=y
 CONFIG_HZ_300=y
+CONFIG_HZ=300
 CONFIG_ARMV7_COMPAT=y
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_ZSMALLOC=y
@@ -671,3 +672,4 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_STRICT_MEMORY_RWX=y
+CONFIG_LOCALVERSION="-purity"
